[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/AH_SpriteSheet_People1.png" type="Texture" id=1]
[ext_resource path="res://scripts/player_controller.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="Animation" id=2]
resource_name = "player_walk_down"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playesr_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playesr_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playesr_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=5]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("playesr_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 20.0

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="playesr_sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 4
hframes = 3
region_enabled = true
region_rect = Rect2( 0, 0, 48, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/player_walk_down = SubResource( 2 )
anims/player_walk_left = SubResource( 3 )
anims/player_walk_right = SubResource( 4 )
anims/player_walk_up = SubResource( 5 )

[node name="pick_pocket_range" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="pick_pocket_range"]
shape = SubResource( 6 )

[node name="scent_spawner" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
rotation = 3.14159
[connection signal="body_entered" from="pick_pocket_range" to="." method="_on_pick_pocket_range_body_entered"]
[connection signal="body_exited" from="pick_pocket_range" to="." method="_on_pick_pocket_range_body_exited"]
[connection signal="timeout" from="scent_spawner" to="." method="_on_scent_spawner_timeout"]
